# photon

./: Aipromt.md  CMakeLists.txt  LICENSE  README.md  gitignore.txt
.github/workflows/: multi-platform-release.yml  release.yml  windows-ci.yml
include/: budget.h  bvh.h  camera.h  denoise.h  material.h  math_util.h  memory.h  photon_types.h  probe.h  ray.h  renderer.h  scene.h  vulkan_backend.h
scripts/: build_windows.ps1
shaders/: composite.comp  gbuffer.frag  gbuffer.vert  reflection_trace.comp  shadow_trace.comp
src/: budget.c  bvh.c  camera.c  denoise.c  main.c  material.c  math_util.c  memory.c  probe.c  ray.c  renderer.c  scene.c  stb_image.h  vulkan_backend.c
